<resources>
    <string name="app_name">Tokopedia Challenge</string>

    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_official_store">Oficial Store</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_transaction">Transaksi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_hint">Cari powerbank</string>
</resources>