<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/feed_selector"
        android:title="@string/title_feed"/>
    <item
        android:id="@+id/navigation_official_store"
        android:icon="@drawable/official_store_selector"
        android:title="@string/title_official_store"/>
    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/wishlist_selector"
        android:title="@string/title_wishlist"/>

    <item
        android:id="@+id/navigation_transaction"
        android:icon="@drawable/transaction_selector"
        android:title="@string/title_transaction"/>
</menu>
